04/20/2004  version 0.1.66  Ian Lewis <IanLewis@member.fsf.org>

    * Made split panes in the default tree view one touch expandable.

04/18/2004  version 0.1.65  Ian Lewis <IanLewis@member.fsf.org>

    * Cleaned up some code in the TabbedView class. Removed the public update()
      method.
    * Changed some actions in the DefaultViewTree extend AbstractAction since
      they will probobly have key mnemonics in the future.
    * Added key mnemonics to the menu bar items so that you can navigate them
      easier using the keyboard.

04/17/2004  version 0.1.64  Ian Lewis <IanLewis@member.fsf.org>

    * Added logic to the tree in the Default view so that dragged and dropped
      nodes are always visible after a drop. New nodes that are added
      through the context menu are also visible after they are added.
    * Fixed support for cdata-sections in the DOMSerializer

04/16/2004  version 0.1.63  Ian Lewis <IanLewis@member.fsf.org>

    * Added logic to highlight a node when the user is going to drop onto a
      particular node.

04/04/2004  version 0.1.62  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed the problem where dragging an element node that was already
      selected initiated editing for that node. That was kind of silly so
      it doesn't do it any more.
    * Fixed a problem in the serialization where characters weren't resolved
      to entities in attributes

04/03/2004  version 0.1.61  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a couple bugs that caused null pointer exceptions when inserting
      around the document root.
    * Fixed it so that when you drag off the tree the cue line is erased.

04/02/2004  version 0.1.60  Ian Lewis <IanLewis@member.fsf.org>

    * Added much better drag and drop support. You can now rearrange nodes
      with ease. The relative location of the drop is used to determine
      where to put the dragged node. Draws a line in between nodes in the