@@ -1,6 +1,8 @@
 04/20/2004  version 0.1.66  Ian Lewis <IanLewis@member.fsf.org>
 
     * Made split panes in the default tree view one touch expandable.
+    * Made it so if opening a file and the only document open is untitled
+      and clean then jsXe closes it.
 
 04/18/2004  version 0.1.65  Ian Lewis <IanLewis@member.fsf.org>
 
